--- a/index.html
+++ b/index.html
@@ -15,8 +15,45 @@
     <div class="boarding-pass">
         <h2>Cartão de embarque</h2>
         <div class="card-wrapper">
-            <div class="flight-info"></div>
-            <div class="passenger-info"></div>
+            <div class="flight-info">
+                <div class="number-date-wrapper">
+                    <div class="container-left">
+                        Voo
+                        <strong>RS995</strong>
+                    </div>
+                    <div class="container-right">
+                        Data
+                        <strong>23/05/2023</strong>
+                    </div>
+                </div>
+                <div class="travel-wrapper">
+                    <div class="container-left">
+                        São Paulo, Brasil
+                        <h1 class="black">GRU</h1>
+                        <div class="black">17:00</div>
+                    </div>
+                    <img src="assets/plane.svg" alt="plane">
+                    <div class="container-right">
+                        São Francisco, EUA
+                        <h1 class="black">SFO</h1>
+                        <div class="black">04:48</div>
+                    </div>
+                </div>
+                
+            </div>
+            <div class="passenger-info">
+                <div class="passenger-wrapper">
+                    <div class="container-left">
+                        Passageiro
+                        <strong>Rodrigo Terron</strong>
+                    </div>
+                    <div class="container-right">
+                        Assento
+                        <strong>28A</strong>
+                    </div>
+                </div>
+                
+            </div>
             <div class="boarding-info"></div>
         </div>
         <p>Qualquer problema procure o balcão de atendimento da sua companhia aérea</p>
